# SEEG-AGENT

./: .env.example  .gitignore  Makefile  README.md  README.zh-CN.md
.claude/: suggested-skills-queue.md
.github/workflows/: deploy-demo.yml
backend/: pyproject.toml
backend/app/: main.py  settings.py
backend/app/agent/: agent.py  provider_store.py  providers.py
backend/app/analysis/: signal.py
backend/app/api/: analysis.py  chat.py  electrodes.py  files.py  providers.py
backend/app/io/: edf_loader.py  electrode_io.py  session_store.py
backend/app/viz/: plotly_fig.py
backend/tests/: test_api_contracts.py  test_edf_smoke.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AnalysisToolbar.tsx  BrainPanel.tsx  ChannelList.tsx  ChatPanel.tsx  FileLoader.tsx  Plot.tsx  SettingsPanel.tsx  SignalPanel.tsx
frontend/src/demo/: DemoBanner.tsx  config.ts  demoApi.ts  demoEngine.ts
frontend/src/store/: appStore.ts
