[project]
name = "seeg-agent-backend"
version = "0.1.0"
description = "SEEG LFP signal processing agent - backend"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13",
    "python-multipart>=0.0.12",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pydantic-ai-slim[anthropic,openai]>=0.0.14",
    "mne>=1.8",
    "mne-connectivity>=0.7",
    "pyedflib>=0.1.38",
    "nibabel>=5.3",
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
    "plotly>=5.24",
    "pyarrow>=18",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
